# PostApiDRF

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
PostsApiDRF/: asgi.py  settings.py  urls.py  wsgi.py
PostsApiDRF/settings/: base.py  local.py
apps/accounts/migrations/: 0001_initial.py
apps/posts/migrations/: 0001_initial.py
