[tool.poetry]
name = "postsapidrf"
version = "0.1.0"
description = ""
authors = ["josejuniorpg <yunipgx@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
djangorestframework = "^3.15.2"
poetry = "^1.8.3"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
